<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/standart"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/standart"
        android:layout_marginEnd="@dimen/standart"
        android:background="@color/effectCardBackground"
        android:padding="@dimen/standart">

        <TextView
            android:id="@+id/task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standart"
            android:fontFamily="sans-serif-medium"
            android:text="@string/task_name"
            android:textColor="@color/effectTitleColor"
            android:textSize="@dimen/task_title_size"
            app:layout_constraintEnd_toStartOf="@+id/task_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/task_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half"
            android:layout_marginEnd="@dimen/standart"
            android:text="@string/task_description"
            android:textColor="@color/effectDescriptionColor"
            android:textSize="@dimen/task_desc_size"
            app:layout_constraintEnd_toStartOf="@+id/task_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_name" />

        <ImageView
            android:id="@+id/task_icon"
            android:layout_width="@dimen/task_icon_size"
            android:layout_height="@dimen/task_icon_size"
            android:contentDescription="@string/task_icon_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>