<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RotationActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/rotationToolbar"
        style="@style/Theme.PhotoEditor.Header.Effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/rotation_task_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rotationToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standart">

            <ImageView
                android:id="@+id/rotationImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:contentDescription="@string/current_image_desc"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/rotationAnglePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standart"
                android:ems="10"
                android:hint="@string/rotation_angle_hint"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintStart_toStartOf="@+id/rotationImage"
                app:layout_constraintEnd_toEndOf="@+id/rotationImage"
                app:layout_constraintTop_toBottomOf="@+id/rotationImage"
                android:importantForAutofill="no" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/applyRotationButton"
                style="@style/Theme.PhotoEditor.Button.Accent"
                android:layout_marginTop="@dimen/standart"
                android:text="@string/apply_button"
                app:icon="@drawable/ic_check"
                app:layout_constraintStart_toStartOf="@id/rotationAnglePicker"
                app:layout_constraintEnd_toEndOf="@+id/rotationAnglePicker"
                app:layout_constraintTop_toBottomOf="@+id/rotationAnglePicker" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelChanging"
                style="@style/Theme.PhotoEditor.Button"
                android:text="@string/cancel_button"
                android:layout_marginTop="@dimen/half"
                app:layout_constraintStart_toStartOf="@id/applyRotationButton"
                app:layout_constraintEnd_toEndOf="@id/applyRotationButton"
                app:layout_constraintTop_toBottomOf="@id/applyRotationButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>