<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegmentationActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/segmentationToolbar"
        style="@style/Theme.PhotoEditor.Header.Effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/segmentation_task_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/segmentationToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standart">

            <ImageView
                android:id="@+id/segmentationImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:contentDescription="@string/current_image_desc"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/applySegmentationButton"
                style="@style/Theme.PhotoEditor.Button.Accent"
                android:layout_marginTop="@dimen/standart"
                android:text="@string/apply_button"
                app:icon="@drawable/ic_check"
                app:layout_constraintStart_toStartOf="@id/segmentationImage"
                app:layout_constraintEnd_toEndOf="@+id/segmentationImage"
                app:layout_constraintTop_toBottomOf="@+id/segmentationImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>